--- a/flask/templates/index.html
+++ b/flask/templates/index.html
@@ -142,6 +142,7 @@
                         <li><a href="javascript:location.href='/controller'">Controller</a></li>
                         <li><a href="javascript:location.href='/setting'">Setting</a></li>
                         <li><a href="javascript:location.href='/regist'">User Regist & Delete</a></li>
+                        <li><a href="javascript:location.href='/gesture'">Gesture Setting</a></li>
                         <li><a href="javascript:location.href='/about'">about</a></li>
                     </ul>
                 </div>
