--- a/flask/templates/regist_del.html
+++ b/flask/templates/regist_del.html
@@ -45,7 +45,10 @@
                     type:'post',
                     url:"/setting/user_delete",
                     data:sendData,
-                    async:false
+                    async:false,
+                    success:(data)=>{
+                        alert('삭제 완료!')
+                    }
                 })
                 location.reload();
             }
@@ -57,6 +60,7 @@
                     console.log({action:'sendCommand',json:json})
                 },'json')
             }
+            
             var form_submit=(name)=>{
                 var check_submit=confirm(`${name} 사용자를 삭제을 하시겠습니까?`);
                 return check_submit;
