--- a/flask/templates/gesture.html
+++ b/flask/templates/gesture.html
@@ -21,7 +21,7 @@
                 },'json')
             }
             var form_submit=()=>{
-                var check_submit=confirm('사용자 등록을 하시겠습니까?');
+                var check_submit=confirm('제스처를 설정 하시겠습니까?');
                 if(check_submit==false){
                     return
                 }
