--- a/flask/templates/gesture.html
+++ b/flask/templates/gesture.html
@@ -60,7 +60,7 @@
                 </div>
                 <form>
                     <div class="ui-field-contain">
-                        <label for="select-native-0">손바닥:</label>
+                        <label for="select-native-0">위:</label>
                         <select name="select-native-0" id="select-native-0" data-mini="true">
                             <option value="0">STOP</option>
                             <option value="1">LAND</option>
@@ -74,7 +74,7 @@
                 </form>
                 <form>
                     <div class="ui-field-contain">
-                        <label for="select-native-1">주먹:</label>
+                        <label for="select-native-1">아래:</label>
                         <select name="select-native-1" id="select-native-1" data-mini="true">
                             <option value="0">STOP</option>
                             <option value="1" selected>LAND</option>
@@ -88,7 +88,7 @@
                 </form>
                 <form>
                     <div class="ui-field-contain">
-                        <label for="select-native-2">손가락:</label>
+                        <label for="select-native-2">왼쪽:</label>
                         <select name="select-native-2" id="select-native-2" data-mini="true">
                             <option value="0">STOP</option>
                             <option value="1">LAND</option>
@@ -102,7 +102,7 @@
                 </form>
                 <form>
                     <div class="ui-field-contain">
-                        <label for="select-native-3">왼쪽:</label>
+                        <label for="select-native-3">오른쪽:</label>
                         <select name="select-native-3" id="select-native-3" data-mini="true">
                             <option value="0">STOP</option>
                             <option value="1">LAND</option>
@@ -116,7 +116,7 @@
                 </form>
                 <form>
                     <div class="ui-field-contain">
-                        <label for="select-native-4">오른쪽:</label>
+                        <label for="select-native-4">손바닥:</label>
                         <select name="select-native-4" id="select-native-4" data-mini="true">
                             <option value="0">STOP</option>
                             <option value="1">LAND</option>
@@ -130,7 +130,7 @@
                 </form>
                 <form>
                     <div class="ui-field-contain">
-                        <label for="select-native-5">위:</label>
+                        <label for="select-native-5">주먹:</label>
                         <select name="select-native-5" id="select-native-5" data-mini="true">
                             <option value="0">STOP</option>
                             <option value="1">LAND</option>
@@ -144,7 +144,7 @@
                 </form>
                 <form>
                     <div class="ui-field-contain">
-                        <label for="select-native-6">아래:</label>
+                        <label for="select-native-6">검지:</label>
                         <select name="select-native-6" id="select-native-6" data-mini="true">
                             <option value="0">STOP</option>
                             <option value="1">LAND</option>
