--- a/flask/templates/gesture.html
+++ b/flask/templates/gesture.html
@@ -69,6 +69,7 @@
                             <option value="4">Right Move</option>
                             <option value="5">Up Move</option>
                             <option value="6">Down Move</option>
+                            <option value="7">Set Distance</option>
                         </select>
                     </div>
                 </form>
@@ -83,6 +84,7 @@
                             <option value="4">Right Move</option>
                             <option value="5">Up Move</option>
                             <option value="6">Down Move</option>
+                            <option value="7">Set Distance</option>
                         </select>
                     </div>
                 </form>
@@ -97,6 +99,7 @@
                             <option value="4">Right Move</option>
                             <option value="5">Up Move</option>
                             <option value="6">Down Move</option>
+                            <option value="7">Set Distance</option>
                         </select>
                     </div>
                 </form>
@@ -111,6 +114,7 @@
                             <option value="4">Right Move</option>
                             <option value="5">Up Move</option>
                             <option value="6">Down Move</option>
+                            <option value="7">Set Distance</option>
                         </select>
                     </div>
                 </form>
@@ -125,6 +129,7 @@
                             <option value="4" selected>Right Move</option>
                             <option value="5">Up Move</option>
                             <option value="6">Down Move</option>
+                            <option value="7">Set Distance</option>
                         </select>
                     </div>
                 </form>
@@ -139,12 +144,13 @@
                             <option value="4">Right Move</option>
                             <option value="5" selected>Up Move</option>
                             <option value="6">Down Move</option>
+                            <option value="7">Set Distance</option>
                         </select>
                     </div>
                 </form>
                 <form>
                     <div class="ui-field-contain">
-                        <label for="select-native-6">검지:</label>
+                        <label for="select-native-6">브이:</label>
                         <select name="select-native-6" id="select-native-6" data-mini="true">
                             <option value="0">STOP</option>
                             <option value="1">LAND</option>
@@ -153,6 +159,20 @@
                             <option value="4">Right Move</option>
                             <option value="5">Up Move</option>
                             <option value="6" selected>Down Move</option>
+                            <option value="7">Set Distance</option>
+                        </select>
+                    </div>
+                    <div class="ui-field-contain">
+                        <label for="select-native-7">검지:</label>
+                        <select name="select-native-7" id="select-native-6" data-mini="true">
+                            <option value="0">STOP</option>
+                            <option value="1">LAND</option>
+                            <option value="2">SNAPSHOT</option>
+                            <option value="3">Left Move</option>
+                            <option value="4">Right Move</option>
+                            <option value="5">Up Move</option>
+                            <option value="6" selected>Down Move</option>
+                            <option value="7">Set Distance</option>
                         </select>
                     </div>
                 </form>
