--- a/flask/templates/gesture.html
+++ b/flask/templates/gesture.html
@@ -12,8 +12,8 @@
                 text-align: center;
             }
             .thumbnail{
-                width:25px;
-                height:25px;
+                width:50px;
+                height:50px;
             }
 
         </style>
@@ -63,10 +63,11 @@
                 <div class="setting-box">
                     <h1>User Gesture Setting</h1>
                 </div>
+                <br>
                 <form>
                     <div class="ui-field-contain">
-                        <label for="select-native-0"><img src="../static/img/up.png" class = "thumbnail"></label>
-                        <select name="select-native-0" id="select-native-0"data-mini="true">
+                        <label for="select-native-0" style="margin:0px"><img src="../static/img/up.png" class = "thumbnail"></label>
+                        <select name="select-native-0" id="select-native-0">
                             <option value="0">STOP</option>
                             <option value="1">LAND</option>
                             <option value="2">SNAPSHOT</option>
@@ -80,8 +81,8 @@
                 </form>
                 <form>
                     <div class="ui-field-contain">
-                        <label for="select-native-1"><img src="../static/img/down.png" class = "thumbnail"></label>
-                        <select name="select-native-1" id="select-native-1" data-mini="true">
+                        <label for="select-native-1" style="margin:0px"><img src="../static/img/down.png" class = "thumbnail"></label>
+                        <select name="select-native-1" id="select-native-1">
                             <option value="0">STOP</option>
                             <option value="1" selected>LAND</option>
                             <option value="2">SNAPSHOT</option>
@@ -95,8 +96,8 @@
                 </form>
                 <form>
                     <div class="ui-field-contain">
-                        <label for="select-native-2"><img src="../static/img/left.png" class = "thumbnail"></label>
-                        <select name="select-native-2" id="select-native-2" data-mini="true">
+                        <label for="select-native-2" style="margin:0px"><img src="../static/img/left.png" class = "thumbnail"></label>
+                        <select name="select-native-2" id="select-native-2">
                             <option value="0">STOP</option>
                             <option value="1">LAND</option>
                             <option value="2" selected>SNAPSHOT</option>
@@ -110,8 +111,8 @@
                 </form>
                 <form>
                     <div class="ui-field-contain">
-                        <label for="select-native-3"><img src="../static/img/right.png" class = "thumbnail"></label>
-                        <select name="select-native-3" id="select-native-3" data-mini="true">
+                        <label for="select-native-3" style="margin:0px"><img src="../static/img/right.png" class = "thumbnail"></label>
+                        <select name="select-native-3" id="select-native-3">
                             <option value="0">STOP</option>
                             <option value="1">LAND</option>
                             <option value="2">SNAPSHOT</option>
@@ -125,8 +126,8 @@
                 </form>
                 <form>
                     <div class="ui-field-contain">
-                        <label for="select-native-4"><img src="../static/img/open.png" class = "thumbnail"></label>
-                        <select name="select-native-4" id="select-native-4" data-mini="true">
+                        <label for="select-native-4" style="margin:0px"><img src="../static/img/open.png" class = "thumbnail"></label>
+                        <select name="select-native-4" id="select-native-4">
                             <option value="0">STOP</option>
                             <option value="1">LAND</option>
                             <option value="2">SNAPSHOT</option>
@@ -140,8 +141,8 @@
                 </form>
                 <form>
                     <div class="ui-field-contain">
-                        <label for="select-native-5"><img src="../static/img/punch.png" class = "thumbnail"></label>
-                        <select name="select-native-5" id="select-native-5" data-mini="true">
+                        <label for="select-native-5" style="margin:0px"><img src="../static/img/punch.png" class = "thumbnail"></label>
+                        <select name="select-native-5" id="select-native-5">
                             <option value="0">STOP</option>
                             <option value="1">LAND</option>
                             <option value="2">SNAPSHOT</option>
@@ -155,8 +156,8 @@
                 </form>
                 <form>
                     <div class="ui-field-contain">
-                        <label for="select-native-6"><img src="../static/img/V.png" class = "thumbnail"></label>
-                        <select name="select-native-6" id="select-native-6" data-mini="true">
+                        <label for="select-native-6" style="margin:0px"><img src="../static/img/V.png" class = "thumbnail"></label>
+                        <select name="select-native-6" id="select-native-6">
                             <option value="0">STOP</option>
                             <option value="1">LAND</option>
                             <option value="2">SNAPSHOT</option>
@@ -168,8 +169,8 @@
                         </select>
                     </div>
                     <div class="ui-field-contain">
-                        <label for="select-native-7"><img src="../static/img/index_finger.png" class = "thumbnail"></label>
-                        <select name="select-native-7" id="select-native-6" data-mini="true">
+                        <label for="select-native-7" style="margin:0px"><img src="../static/img/index_finger.png" class = "thumbnail"></label>
+                        <select name="select-native-7" id="select-native-6">
                             <option value="0">STOP</option>
                             <option value="1">LAND</option>
                             <option value="2">SNAPSHOT</option>
